 - crash: Fix NPE in PerformersHelper.sortByRelevance when currentQuery is null or empty
 - crash: Guard against showing UI after activity paused in LocalBroadcastReceiver
 - crash: Move startForeground call from onCreate to onStartCommand in MusicPlaybackService
 - crash: Centralize NotificationUpdateDaemon start in MainApplication and remove redundant scheduling from EngineIntentService

FrostWire 2.9.6 build 748 APR/11/2025
 - Fix: Avoid possible freeze sorting too many search results
 - yt_dlp-2025.03.31
 - gradle-8.11.1
 - com.android.tools.build:gradle:8.8.2
 - androidx.core:core:1.16.0
 - com.google.android.ump:user-messaging-platform:3.2.0
 - org.jetbrains.kotlin:kotlin-gradle-plugin:2.0.21
 - org.jetbrains.kotlin:kotlin-stdlib-jdk8:2.0.21
 - com.google.firebase:firebase-bom:33.12.0
 - com.applovin:applovin-sdk:13.2.0
 - com.applovin.mediation:unityads-adapter:4.14.1.0

FrostWire 2.9.5 build 747 MAR/09/2025
 - Search works much better
 - Filter out search results with no keyword matches
 - yt_dlp-2025.2.19
 - com.google.firebase:firebase-crashlytics-gradle:3.0.3
 - com.google.firebase:firebase-bom:33.10.0
 - com.applovin:applovin-sdk:13.1.0
 - com.applovin.mediation:unityads-adapter:4.13.1.1
 - com.applovin.mediation:unityads-adapter:4.14.1.0

FrostWire 2.9.4 build 746 DEC/26/2024
 - Upgraded targetSdkVersion to 34 (Android 14).
 - Upgraded compileSdk to 35 (Android 15).
 - Increased minSdkVersion to 26 (Android 8.0 Oreo).
 - Updated Java source and target compatibility to Java 17.
 - androidx.core:core:1.15.0
 - com.google.firebase:firebase-bom:33.7.0
 - com.google.android.ump:user-messaging-platform:3.1.0
 - Removed deprecated dependencies:
 - com.google.android.gms:play-services-location:21.3.0
 - com.google.android.gms:play-services-ads-identifier:18.1.0
 - Improved handling of POST_NOTIFICATIONS permission for Android 13 and 14 compliance.
 - Migrated background services to Android's Workers API for improved performance and maintainability.