@@ -17,7 +17,7 @@
  * limitations under the License.
  */
 -->
-<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.frostwire.android.gui.views.SafeDrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/activity_main_drawer_layout"
         android:layout_width="match_parent"
@@ -79,4 +79,4 @@
                     android:layout_gravity="bottom"
                     android:visibility="gone" />
         </com.google.android.material.navigation.NavigationView>
-</androidx.drawerlayout.widget.DrawerLayout>
+</com.frostwire.android.gui.views.SafeDrawerLayout>
